ACLOCAL_AMFLAGS = -I m4 --install
bin_PROGRAMS = hlsegmenter

hlsegmenter_SOURCES = segmenter/hls_bitread.c segmenter/hls_buf.c segmenter/hls_core.c segmenter/hls_mpegts.c segmenter/hls_stream.c segmenter/hls_log.c segmenter/hls_main.c segmenter/hls_utils.c segmenget/hls_file.h  segmenget/hls_log.h segmenget/hls_types.h  segmenget/hls_utils.h segmenget/hls_bitread.h segmenget/hls_buf.h segmenget/hls_core.h segmenget/hls_mpegts.h  segmenget/hls_stream.h

hlsegmenter_CFLAGS = -g
hlsegmenter_LDADD = -lavformat -lavcodec



